# web-api-rs

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  helper.Dockerfile
.github/workflows/: general.yml
config/: base.yaml  local.yaml  production.yaml
scripts/: init_db.sh
src/: config.rs  lib.rs  main.rs  observability.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
