[package]
name = "zero2prod"
version = "0.1.0"
authors = ["fulstaph <fulstaph@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-http = "3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
lexical-core = "0.7.6"
serde = { version = "1.0.115", features = ["derive"]}
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
log = "0.4.14"
tracing = { version = "0.1.26", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.4"
tracing-log = "0.1.2"
tracing-actix-web = "0.4.0-beta.4"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "runtime-actix-rustls"
]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
actix-rt = "2.2.0"
reqwest = "0.11.3"
once_cell = "1.8.0"